--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/springbootdb
+spring.datasource.url= jdbc:mysql://localhost:3306/unidb
 spring.datasource.username=root
 spring.datasource.password=admin
 
